--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -21,16 +21,20 @@
     "user-name-validation": "Nom d'utilisateur est nécessaire"
   },
   "card": {
-    "update-button": "Mise à jour",
+    "edit-button": "Éditer",
     "delete-button": "Supprimer"
   },
   "product-operations": {
     "heading-text": "Entrez l'en-tête",
-    "add-product-text": "Ajouter un produit",
-    "edit-product-text": "Modifier le produit",
     "description-text": "Entrez la description",
     "imageUrl-text": "Saisissez l'URL de l'image",
-    "update-button": "Mettre à jour le produit",
+    "edit-heading": "Modifier l'en-tête",
+    "edit-description": "Éditer la description",
+    "edit-imageUrl": "Modifier l'URL de l'image",
+    "edit-product-text": "Modifier le produit",
+    "add-product-text": "Ajouter un produit",
+    "add-button": "Ajouter",
+    "save-button": "enregistrer",
     "cancel-button": "Annuler"
   }
 }
