Updates for testing

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,8 @@
     "header": {
         "heading": "Welcome Foodies",
         "add-product-button": "Add Product",
-        "change-theme-button": "Change theme",
-        "change-language": "Change language"
+        "change-theme-button": "Change Theme",
+        "change-language": "Change Language"
     },
     "auth": {
         "login-tab": "Login",
@@ -25,11 +25,11 @@
       "delete-button": "Delete"
     },
     "product-operations": {
-      "heading-text": "Enter heading",
-      "description-text": "Enter description",
+      "heading-text": "Enter Heading",
+      "description-text": "Enter Description",
       "imageUrl-text": "Enter image URL",
-      "edit-heading": "Edit heading",
-      "edit-description": "Edit description",
+      "edit-heading": "Edit Heading",
+      "edit-description": "Edit Description",
       "edit-imageUrl": "Edit image URL",
       "edit-product-text": "Edit Product",
       "add-product-text": "Add Product",
